# finance

./: .env  .env.example  .gitignore  CLOUD_DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_SETUP.md  Dockerfile  ai_error_fixer.py  auto_categorize.py  cloudbuild.yaml  cloudrun-job.yaml  config.py  deploy.sh  docker-compose.yml  entrypoint.sh  error_handler.py  fix_errors.py  init_db.py  init_user_categories.py  pyproject.toml  requirements.txt  run.py  test_data_isolation.py  test_isolation.py  test_ui_flow.py  update_db.py  wsgi.py
.claude/agents/: deployment-checklist.md  gcp-deployment.md  receipt-processor.md
.claude/commands/: deployment-checklist.md
app/: __init__.py  db_manager.py  models.py
app/routes/: accounts.py  ai_categorizer.py  assets.py  auth.py  backup.py  backup_view.py  categories.py  diag.py  feedback.py  financial_advisor.py  investments.py  main.py  migrate.py  receipts.py  scenario_planner.py  settings.py  tax_assistant.py  transactions.py
app/services/: __init__.py  ai_categorizer.py  categorizer.py  chart_service.py  dashboard.py  financial_advisor.py  receipt_ocr.py  scenario_planner.py  tax_assistant.py
app/templates/: base.html  dashboard.html  homepage.html
data/: finance.db  finance_default.db  finance_user_11.db  finance_user_8.db
data/error_logs/: fixer_summary.json
data/rental_properties/: Beach House.json  (+1 more)
scripts/: README_RENTAL_TRACKER.md  rental_property_tracker.py  run_migration.py  seed_regex_patterns.py
sessions/: sessions-config.json
tests/: conftest.py  test_user_creation.py
(+57 files in other folders)
