[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-migrate>=4.0.5",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.9.0",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "pdfplumber>=0.11.7",
    "pillow>=10.3.0",
    "psycopg2>=2.9.11",
    "pypdf>=6.1.3",
    "pytesseract>=0.3.10",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.5.0",
    "werkzeug>=3.0.1",
]
